2007-03-20  Rafael Villar Burke  <pachi@rvburke.com>

	* articles/extending-our-pygtk-application/
	extending-our-pygtk-application.htm: fix link URL

2007-03-12  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: add weedbox

2007-03-02  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: add Go-osmose

2007-02-26  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: update gquilt link

2007-02-19  Rafael Villar Burke  <pachi@rvburke.com>

	* newsitems: Change Sridhar Ratna's website URL
	to http://www.nearfar.org

2007-02-13  Rafael Villar Burke  <pachi@rvburke.com>

	* newsitems: Add all-in-one installer link

2007-02-10  Rafael Villar Burke  <pachi@rvburke.com>

	* MAINTAINERS: update e-mail

2007-02-09  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add PyTrainer

2007-02-07  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Gnapsack

2007-02-06  Rafael Villar Burke  <pachi@rvburke.com>

	* newsitems.py: Advertise 2.10.4 release
	* applications.src: Update gquilt description

2007-02-05  Rafael Villar Burke  <pachi@rvburke.com>

	* articles/Creating...: Close anchor tag.
	* applications.src: Add mp3val-gui and dbus-inspector

2007-01-30  Olav Vitters  <olav@bkor.dhs.org>

	* Makefile: cp -fa to force the files to be copied (fixes build).

2007-01-30  Rafael Villar Burke  <pachi@rvburke.com>

	* downloads.src, developer.src: Change references to CVS to SVN.

2007-01-15  Christian Reis  <kiko@async.com.br>

	* applications.src: Add AVC.

2007-01-10  Rafael Villar Burke  <pachi@rvburke.com>

	* developer.src, head.src: change Viewcvs urls to subversion ones.

2006-12-24  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Planimo.

2006-12-22  Rafael Villar Burke  <pachi@rvburke.com>

	* articles.src: Add french translations of Marc Mruss
	by Daniel Coquette.

2006-12-22  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Exaile!.
