@@ -1,3 +1,9 @@
+2007-03-25  Rafael Villar Burke  <pachi@rvburke.com>
+
+	* articles/custom-widgets-glade/
+	    Custom_PyGTK_Widgets_in_Glade3.html
+	    Custom_PyGTK_Widgets_in_Glade3-part-2.html
+
 2007-03-20  Rafael Villar Burke  <pachi@rvburke.com>
 
 	* articles/extending-our-pygtk-application/
